--- a/INDEX.html
+++ b/INDEX.html
@@ -21,16 +21,16 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="INDEX.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">ABOUT</a>
+                    <a class="nav-link" href="about.html">ABOUT</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">SEARCH <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="search.html">SEARCH <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">SCORE <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="score.html">SCORE <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -40,29 +40,33 @@
         </div>
     </nav>
     <div class="jumbotron">
-        <h1 class="display-3">Jumbo heading</h1>
-        <p class="lead">Jumbo helper text</p>
+        <h1 class="display-3">WELCOME</h1>
         <hr class="my-2">
-        <p>More info</p>
-        <p class="lead">
-            <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
-        </p>
+        <p>6231302003 Kanitkorn Sitti</p>
+        <p>6231302006 thidawan Chaichana</p>
+        <p>6231302020 Soraya Poonperm</p>
+        <p>6231302024 Peetikorn Preechachot</p>
+        
     </div>
     <div id="carouselId" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselId" data-slide-to="0" class="active"></li>
             <li data-target="#carouselId" data-slide-to="1"></li>
             <li data-target="#carouselId" data-slide-to="2"></li>
+            <li data-target="#carouselID" data-slide-to="3"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-                <img data-src="holder.js/900x500/auto/#777:#555/text:First slide" alt="First slide">
+                <img src="./KOrn.jpg" alt="KORN" style="width: 100%; height: 100%;">
             </div>
             <div class="carousel-item">
-                <img data-src="holder.js/900x500/auto/#666:#444/text:Second slide" alt="Second slide">
+                <img src="./aumaim.jpg" alt="AUMAIM" style="width: 100%; height: 100%;">
             </div>
             <div class="carousel-item">
-                <img data-src="holder.js/900x500/auto/#666:#444/text:Third slide" alt="Third slide">
+                <img src="./biatoey.jpg" alt="TOEY" style="width: 100%; height: 100%;">
+            </div>
+            <div class="carousel-item">
+                <img src="./earth.jpg" alt="ERTH" style="width: 100%; height: 100%;">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselId" role="button" data-slide="prev">
