--- a/about.html
+++ b/about.html
@@ -42,10 +42,10 @@
                     <a class="nav-link" href="about.html">ABOUT</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="Search.html">SEARCH <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="search.html">SEARCH <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="Score.html">SCORE <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="score.html">SCORE <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
