--- a/search.html
+++ b/search.html
@@ -48,23 +48,23 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="INDEX.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">ABOUT</a>
+                    <a class="nav-link" href="INDEX.html">Home</span></a>
                 </li>
                 <li class="nav-item active">
+                    <a class="nav-link" href="about.html">ABOUT</a>
+                </li>
+                <li class="nav-item ">
                     <a class="nav-link" href="search.html">SEARCH <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="score.html">SCORE <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="score.html">SCORE </span></a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" id="inputSearch">
                 <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modelId" id="btnSearch">
-            Launch
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modelId" id="btnSearch">
+                SEARCH
             </button>
     </nav>
     <div class="alert alert-danger" mt-3 style="display: none">
