--- a/INDEX.html
+++ b/INDEX.html
@@ -13,7 +13,7 @@
 <body>
    
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
     <div class="jumbotron">
         <h1 class="display-3">WELCOME</h1>
         <hr class="my-2">
-        <p>6231302003 Kanitkorn Sitti</p>
+        <p>6231302003 Kanitkorn Sitthicharoen</p>
         <p>6231302006 thidawan Chaichana</p>
         <p>6231302020 Soraya Poonperm</p>
         <p>6231302024 Peetikorn Preechachot</p>
