--- a/search.html
+++ b/search.html
@@ -60,13 +60,16 @@
                     <a class="nav-link" href="score.html">SCORE </span></a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" id="inputSearch">
-                <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modelId" id="btnSearch">
-                SEARCH
-            </button>
+            
     </nav>
+    <br><br>
+    <h3 style="text-align: center;">SEARCH MEMBER</h3><br>
+    <form class="form-inline my-2 my-lg-0" style="margin-left : 43%;">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" id="inputSearch">
+        <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modelId" id="btnSearch">
+        SEARCH
+    </button>
     <div class="alert alert-danger" mt-3 style="display: none">
         <strong>Error</strong> Your ID is misinput!
     </div>
